# word2vec-toy-app

./: .gitignore  LICENSE  README.md  gradio_app.py  pyproject.toml  requirements.txt
gensim_scripts/: gensim_fasttext.py  gensim_w2v.py
