[tool.poetry]
name = "word2vev-toy-app"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.37.2"
polars = "^1.1.0"
gensim = "^4.3.3"

[tool.taskipy.tasks]
run = "poetry run python app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
